# pr-viewer

./: .dark-factory.yaml  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  test-delete-me.txt  test-rename-new.txt
docs/: architecture.md  dod.md
prompts/: 1-spec-001-backend.md  1-spec-003-backend.md  2-spec-001-frontend.md  2-spec-003-frontend.md
prompts/completed/: 001-fix-tests-and-dod.md  002-spec-001-backend.md  003-spec-001-frontend.md  004-spec-002-backend.md  005-fix-local-tests-ci.md  006-spec-002-frontend.md  007-spec-003-backend.md  008-spec-003-frontend.md
prompts/in-progress/: 003-spec-001-frontend.md  004-spec-002-backend.md  005-fix-local-tests-ci.md  005-spec-002-frontend.md  006-spec-002-frontend.md  008-spec-003-frontend.md
scenarios/: 001-verification-headless-only.md
specs/completed/: 001-commit-diff-viewer.md
specs/in-progress/: 001-commit-diff-viewer.md  002-local-git-provider.md  003-bitbucket-server-provider.md
src/pr_viewer/: __main__.py  config.py  factory.py
src/pr_viewer/api/: compare.py
src/pr_viewer/providers/: base.py  bitbucket_server.py  github.py  local.py
src/pr_viewer/static/: index.html
tests/: test_compare.py  test_compare_bitbucket.py  test_compare_local.py  test_config.py  test_factory.py  test_frontend.py
